<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.budget.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/input" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.budget.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/budget" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.budget.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/search" />
    <fragment
        android:id="@+id/shoppingCart"
        android:name="com.example.budget.ui.ShoppingCart"
        android:label="fragment_shopping_cart"
        tools:layout="@layout/shoppingcart" />
</navigation>